# Bevy_Voxels

./: Cargo.toml  README.md
assets/shaders/: chunk_fragment.wgsl
src/: lib.rs  main.rs  player.rs  world.rs
src/world/: chunk.rs
